--- a/style.css
+++ b/style.css
@@ -13,10 +13,8 @@
 
 
   --font-size-base: 16px;
-  --font-base: "Inter",
-    sans-serif;
-  --font-secondary: "Oranienbaum",
-    serif;
+  --font-base: "Inter", sans-serif;
+  --font-secondary: "Oranienbaum", serif;
 }
 
 * {
@@ -210,7 +208,6 @@ body::-webkit-scrollbar-thumb {
 .contact-btn {
   display: flex;
   height: 40px;
-  /* width: 210px; */
   padding: 15px 20px;
   justify-content: center;
   align-items: center;
@@ -220,25 +217,250 @@ body::-webkit-scrollbar-thumb {
   background: rgba(204, 142, 30, 0.10);
 
   color: #CC8E1E;
-  font-family: "Inter",
-    sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
+  transition: all .3s ease;
+}
+
+.contact-btn:hover {
+  color: white;
+  border: 0.5px solid white;
+  background-color: var(--accent-color);
+
+}
+
+/*Mobile menu*/
+.burger-menu {
+  display: none;
+}
+
+.mobile-menu {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  z-index: 1000;
+  padding: 20px;
+}
+
+.mobile-nav-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+}
+
+.mobile-nav-list .nav-item {
+  margin: 20px 0;
+}
+
+
+@media (max-width: 768px) {
+
+  .profile-block,
+  .mobile-profile-block {
+    display: none;
+  }
+}
+
+.mobile-profile-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+}
+
+
+@media (max-width: 1280px) {
+
+  .nav-list {
+    display: none;
+  }
+
+  .burger-menu {
+    display: block;
+  }
+
+
+
+  .mobile-menu {
+    display: none;
+  }
+
+  .mobile-menu.active {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    align-items: center;
+
+  }
 }
 
 
 
+
+.burger-btn,
+.close-btn {
+  background-color: transparent;
+  border: none;
+  color: var(--accent-color);
+  cursor: pointer;
+}
+
+.icon-burger,
+.icon-cross {
+  display: block;
+  align-items: center;
+  justify-content: center;
+
+  fill: #CC8E1E;
+}
+
+
+/*hero-section*/
+
+.hero-section {
+  display: flex;
+  margin-top: 87px;
+}
+
+.hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.hero-content__text {
+  display: flex;
+  flex-direction: column;
+  width: 413px;
+  gap: 24px;
+}
+
+.hero-img {
+  display: block;
+  height: 100%;
+}
+
+.section-title {
+  color: #2B3F5B;
+  font-family: "Oranienbaum",
+    serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 48px;
+  text-transform: uppercase;
+}
+
+.hero-text {
+  color: #2B3F5B;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+/*services-section*/
+
+.services-section {
+  margin-top: 81px;
+}
+
+.services-list {
+  margin-top: 48px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.services-item {
+  flex: 1 1 calc(33.333% - 20px);
+  background: #f9f9f9;
+  padding: 24px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.card-title {
+  color: #CC8E1E;
+  font-family: "Oranienbaum",
+    serif;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+}
+
+.card-content {
+  flex-grow: 1;
+}
+
+.card-list {
+  list-style-type: none;
+  padding: 0;
+  /* margin: 0 0 15px 0; */
+}
+
+.card-price span {
+  text-decoration: line-through;
+}
+
+/* .card-list li {
+  margin-bottom: 10px;
+} */
+
+
+
+.contact-btn:hover {
+  background-color: #0056b3;
+}
+
+@media (max-width: 768px) {
+  .services-item {
+    flex: 1 1 100%;
+    /* Перемикає на одну картку у ряд */
+  }
+}
 
 
 
 
 /* adaptive */
 
-@media (min-width: 375px) {}
+@media (min-width: 768px) {
+  .mobile-profile-block {
+    flex-direction: row;
+    gap: 10px;
+  }
+
+
+
+  .hero-img {
+    height: 456px;
+  }
+}
 
 
 @media (min-width: 1040px) {}
 
 
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+  .hero-content {
+    flex-direction: row;
+  }
+}
