--- a/style.css
+++ b/style.css
@@ -420,9 +420,31 @@ body::-webkit-scrollbar-thumb {
   text-decoration: line-through;
 }
 
-/* .card-list li {
-  margin-bottom: 10px;
-} */
+
+.form-btn {
+  display: flex;
+  height: 40px;
+  padding: 15px 20px;
+  justify-content: center;
+  align-items: center;
+
+  border-radius: 50px;
+  border: none;
+  background: #CC8E1E;
+
+  color: white;
+  border: 0.5px solid #CC8E1E;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  transition: all .3s ease;
+}
+
+.form-btn:hover {
+  color: var(--accent-color);
+  background-color: white;
+}
 
 
 
@@ -433,9 +455,192 @@ body::-webkit-scrollbar-thumb {
 @media (max-width: 768px) {
   .services-item {
     flex: 1 1 100%;
-    /* Перемикає на одну картку у ряд */
   }
 }
+
+
+/*form*/
+.form-section {
+  margin-top: 116px;
+}
+
+.form-section__content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* gap: 24px;
+  margin-top: 72px; */
+}
+
+.form-container {
+  padding: 20px;
+  border: 1px solid rgba(204, 142, 30, 0.27);
+  width: 413px;
+  text-align: center;
+  margin-top: 48px;
+}
+
+.form-container h1 {
+  color: #2B3F5B;
+  font-family: "Oranienbaum", serif;
+  font-size: 32px;
+  font-weight: 400;
+  line-height: 40px;
+  margin-bottom: 16px;
+  text-align: start;
+}
+
+form {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+}
+
+
+
+input[type="text"],
+input[type="tel"],
+input[type="email"] {
+
+  display: flex;
+  height: 50px;
+  padding: 16px 16px 0 16px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  align-self: stretch;
+  margin-bottom: 8px;
+
+  border-radius: 10px;
+  border: 1px solid rgba(204, 142, 30, 0.60);
+
+  background: #F6F5F2;
+}
+
+input::placeholder {
+  color: #B6BBC3;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+
+label {
+  margin-bottom: 5px;
+  text-align: left;
+
+  color: #646E7C;
+
+  font-family: "Inter", sans-serif;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+}
+
+
+.label {
+  z-index: 1;
+  position: absolute;
+  left: 16px;
+}
+
+.label-name1 {
+  top: 10px;
+}
+
+.label-name2 {
+  top: 68px;
+}
+
+.label-phone {
+  top: 125px;
+}
+
+.label-email {
+  top: 185px;
+}
+
+.label-checkbox {
+  color: #2B3F5B;
+
+  font-family: "Inter Display";
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.checkbox-container {
+  display: flex;
+  align-items: start;
+  cursor: pointer;
+  margin-top: 16px;
+
+}
+
+.checkbox-container .checkbox {
+  width: 50px;
+  height: 24px;
+  margin-right: 5px;
+}
+
+
+button {
+  padding: 10px;
+  background-color: orange;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button:hover {
+  background-color: darkorange;
+}
+
+
+/*slider*/
+.swiper {
+  position: relative;
+  max-width: 837px;
+  height: 100%;
+}
+
+.swiper-slide {
+  width: 639px !important;
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 294px;
+  object-fit: cover;
+}
+
+.swiper-button-next {
+  z-index: 100;
+  background-image: url('assets/icons/arrow-left.png');
+  width: 88px;
+  height: 88px;
+  position: absolute;
+  /* opacity: 0.3; */
+  top: 500px;
+  transition: all 0.3s ease;
+}
+
+
 
 
 
@@ -447,7 +652,6 @@ body::-webkit-scrollbar-thumb {
     flex-direction: row;
     gap: 10px;
   }
-
 
 
   .hero-img {
@@ -462,5 +666,10 @@ body::-webkit-scrollbar-thumb {
 @media (min-width: 1280px) {
   .hero-content {
     flex-direction: row;
+  }
+
+  .form-section__content {
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
