--- a/style.css
+++ b/style.css
@@ -818,7 +818,123 @@ button {
   padding-right: 40px;
 }
 
+/*contact-section*/
 
+.contact-block {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 85px 0;
+  background: white;
+  margin-top: 160px;
+  gap: 150px;
+}
+
+.contact-info {
+  display: flex;
+  flex-direction: column;
+}
+
+.contact-info p:nth-child(1),
+.contact-email p:nth-child(1) {
+  color: #2B3F5B;
+
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 13px;
+}
+
+.contact-info p:nth-child(2),
+.contact-email p:nth-child(2) {
+  color: #2B3F5B;
+
+  font-family: "Oranienbaum",
+    serif;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+  margin-bottom: 18px;
+}
+
+.contact-adress {
+  position: relative;
+  z-index: 3;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.contact-adress p:nth-child(1) {
+  color: #FFF;
+
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.contact-adress p:nth-child(2),
+.contact-adress p span {
+  color: #FFF;
+
+  font-family: Oranienbaum;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+}
+
+.contact-adress span {
+  color: #FFF;
+
+  font-family: Oranienbaum;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 110%;
+}
+
+.icon-map {
+  position: absolute;
+  width: 100%;
+  display: block;
+  z-index: -1;
+  width: 386px;
+  top: -175px;
+  left: -90px;
+}
+
+.contact-list {
+  display: flex;
+  gap: 30px;
+}
+
+.contact-list li a .contact-icon {
+  transition: all .3s ease;
+}
+
+
+.contact-icon {
+  width: 24px;
+  height: 24px;
+  display: block;
+  align-items: center;
+  justify-content: center;
+
+  fill: #CC8E1E;
+  transition: all .3s ease;
+
+}
+
+.contact-icon:hover {
+  fill: #926514;
+}
 
 
 
