--- a/style.css
+++ b/style.css
@@ -581,11 +581,45 @@ label {
 
 }
 
-.checkbox-container .checkbox {
-  width: 50px;
+input[type="checkbox"] {
+  position: relative;
+  appearance: none;
+  --webkit-appearance: none;
+  width: 77px;
   height: 24px;
+  border-radius: 5px;
+  border: 1px solid #B6BBC3;
+
+  background: #F6F5F2;
   margin-right: 5px;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  outline: none;
 }
+
+input[type="checkbox"]::after {
+  display: none;
+  content: url('assets/icons/check.png');
+  width: 24px;
+  height: 24px;
+  margin-top: 5px;
+  margin-left: 3.5px;
+
+}
+
+input[type="checkbox"]:checked {
+  width: 24px;
+  height: 24px;
+}
+
+input[type="checkbox"]:checked:after {
+  display: block;
+}
+
+/* .checkbox-container .checkbox {
+  margin-right: 5px;
+} */
 
 
 button {
