--- a/style.css
+++ b/style.css
@@ -784,7 +784,7 @@ button {
   display: grid;
   grid-template-columns: auto auto auto;
   background-color: var(--beige-base);
-  padding: 10px 0;
+  padding: 10px 10px;
   gap: 10px;
 }
 
@@ -1136,9 +1136,10 @@ footer {
     height: 456px;
   }
 
-  /* .hero-img {
-    height: 456px;
-  } */
+  .price-header,
+  .price-item {
+    padding: 10px 0;
+  }
 
   .hero-section {
     margin-top: 87px;
